--- a/style.css
+++ b/style.css
@@ -9,13 +9,18 @@ h1 {
   color: white;
   align-self: center;
 }
+h2:hover {
+  background: transparent;
+  cursor: pointer;
+  border-bottom: 2px solid white;
+}
 nav {
   position: fixed;
   top: 0;
   color: white;
   left: 0;
   width: 100%;
-  height: 3.5rem;
+  height: 4rem;
   background: #000000;
   display: flex;
   justify-content: space-evenly;
@@ -57,7 +62,15 @@ nav {
   width: 100%;
   height: 100%;
   background: #000000;
-  opacity: 0.6;
+  opacity: 0.3;
+}
+.card-heading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
 }
 .cards {
   display: flex;
@@ -65,12 +78,30 @@ nav {
   height: fit-content;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  width: 100%;
 }
 .card {
-  width: 400px;
-  height: 500px;
-  border-radius: 5px;
+  position: relative;
+  width: 100%;
+  height: 100vh;
   color: black;
   background: white;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    transition: transform 0.4s;
+  }
+}
+.card:hover {
+  cursor: pointer;
+  filter: blur(1);
+  > img {
+    transform: scale(1.3);
+    transform-origin: 50% 50%;
+  }
 }
