--- a/style.css
+++ b/style.css
@@ -105,3 +105,32 @@ nav {
     transform-origin: 50% 50%;
   }
 }
+.bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  height: 100vh;
+  width: 100%;
+  z-index: 1;
+  background: transparent;
+}
+.icon {
+  width: 30px;
+  height: 30px;
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1.5rem;
+  color: white;
+  background: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  padding: 0 1rem;
+  z-index: 4;
+}
